Backbones: export DN42 default routes from BGP
We currently receive a single route for the entire ChaosVPN space
172.31.0.0/16 from our external peers, which has a higher preference
than the static unreachable route we configure for that range. Thus, if
backbone machines are to export this "default" route to access machines,
we need to allow BGP as a default route source in the export filter.
Otherwise, the 172.31.0.0/16 route will only be exported to access
machines when we *aren't* receiving it from external peers, and the
static unreachable route is preferred.

This has got me thinking that there may be a more elegant way to manage
the backbone vs. access BGP views on backbone machines with multiple
routing tables. I think this would address one remaining issue with the
current arrangement, namely that we will experience internal churn if
the 172.31.0.0/16 route is flapping. But that's a project for a later
time.

--- a/ansible/roles/bird/templates/backbone.conf.j2
+++ b/ansible/roles/bird/templates/backbone.conf.j2
@@ -18,7 +18,10 @@ filter to_backbone {
 }
 
 filter to_access {
-    if (is_internal() && source ~ [ RTS_BGP, RTS_DEVICE ]) || (is_dn42_default() && source = RTS_STATIC) then {
+    if (is_internal() && source ~ [ RTS_BGP, RTS_DEVICE ])
+        || (is_dn42_default() && source ~ [ RTS_BGP, RTS_STATIC ])
+    then
+    {
         if from !~ {{ internal_net_v6 }} then {
             # Same deal as above.
             bgp_next_hop = {{ internal_ipv6 }};
