Reject DN42 routes with long AS_PATHs
Some experimenting has shown that routes received from DN42 peers with
AS_PATHs longer than 10 ASNs are almost always unusable (zombies,
flapping routes, misconfigurations, ...). If we reject such routes, then
we decrease significantly the number of updates that get sent to iBGP
peers or to other DN42 peers without compromising service.

This change is based on the HIGHDEF-AS routing policy (which rejects
routes with AS_PATH length greater than 12 ASNs).

--- a/ansible/roles/bird/templates/backbone.conf.j2
+++ b/ansible/roles/bird/templates/backbone.conf.j2
@@ -35,6 +35,9 @@ filter to_access {
 filter from_exterior {
     if is_internal() then reject;
     if !is_dn42() then reject;
+    if bgp_path.len > 10 then {
+        reject;
+    }
     if net ~ 0.0.0.0/0 && roa_check(roa_v4, net, bgp_path.last) != ROA_VALID then {
         reject "ROA check failed for ", net, " AS ", bgp_path.last;
     }
