--- a/ansible/roles/base/templates/nftables.conf.j2
+++ b/ansible/roles/base/templates/nftables.conf.j2
@@ -12,7 +12,9 @@
   {%- for host in groups.wg_mesh %}
     {%- if host != inventory_hostname
           and host not in wg_mesh_exclude|default([])
-          and inventory_hostname not in hostvars[host].wg_mesh_exclude|default([]) %}
+          and inventory_hostname not in hostvars[host].wg_mesh_exclude|default([])
+          and (wg_mesh_endpoint_address is defined
+               or hostvars[item].wg_mesh_endpoint_address is defined) %}
       {%- if hostvars[host].router_role == "backbone" %}
         {%- set computed_ifs.bb = computed_ifs.bb + ["int-" + hostvars[host].inventory_hostname_short] %}
       {%- elif hostvars[host].router_role == "access" %}
