--- a/ansible/roles/bird/templates/base.conf.j2
+++ b/ansible/roles/bird/templates/base.conf.j2
@@ -50,7 +50,6 @@ protocol direct endpoints {
 {% endif %}
 template bgp bgp_base {
     local as {{ bgp_as }};
-    confederation {{ bgp_confed }};
     hold time 90;
     startup hold time 90;
     ipv4 {
@@ -68,33 +67,24 @@ include "rip.conf";
 include "radv.conf";
 {% endif %}
 
-# The following are BGP peers in the same sub-AS as this router.
+{% set peer_calc = namespace(auto_peers=[]) %}
+{% if router_role == "access" %}
+{% for host in groups[site_group] if hostvars[host].router_role == "backbone" %}
+{% set peer_calc.auto_peers = peer_calc.auto_peers + [host] %}
+{% endfor %}
+{% elif router_role == "backbone" %}
 {% for host in groups.all %}
-{% if hostvars[host].bgp_as == bgp_as and host != inventory_hostname %}
-protocol bgp int_{{ hostvars[host].inventory_hostname_short|replace('-', '_') }} from {{ hostvars[host].router_role }} {
-    neighbor {{ hostvars[host].internal_ipv6 }} as {{ hostvars[host].bgp_as }};
-}
+{% if host in groups.backbones or host in groups[site_group] %}
+{% set peer_calc.auto_peers = peer_calc.auto_peers + [host] %}
 {% endif %}
 {% endfor %}
-
-{% if inventory_hostname in groups.wg_mesh %}
-# This host is in the Wireguard mesh. The following are BGP peers that
-# are in a different sub-AS but which are also in the mesh.
-{% for host in groups.wg_mesh %}
-{% if host != inventory_hostname
-      and host not in wg_mesh_exclude|default([])
-      and inventory_hostname not in hostvars[host].wg_mesh_exclude|default([])
-      and (wg_mesh_endpoint_address is defined
-           or hostvars[item].wg_mesh_endpoint_address is defined)
-      and hostvars[host].bgp_as != bgp_as %}
-protocol bgp int_{{ hostvars[host].inventory_hostname_short|replace('-', '_') }} from {{ hostvars[host].router_role }} {
-    neighbor {{ hostvars[host].internal_ipv6 }} as {{ hostvars[host].bgp_as }};
-    multihop;
-}
 {% endif %}
+{% for host in peer_calc.auto_peers if host != inventory_hostname %}
+protocol bgp int_{{ hostvars[host].inventory_hostname_short|replace('-', '_') }} from {{ hostvars[host].router_role }} {
+    neighbor {{ hostvars[host].internal_ipv6 }} as {{ bgp_as }};
+}
 {% endfor %}
 
-{% endif %}
 # The following are manually configured BGP peers.
 {% for peer in bgp_manual_peers|default([]) %}
 protocol bgp {{ peer.name }} from {{ peer.template }} {
