Limit Unbound's UDP responses to 1,232 octets
This should prevent any MTU issues with UDP responses, since with this
limit any packets sent should be under the IPv6 minimum MTU.

--- a/ansible/roles/rdns/templates/unbound.conf.j2
+++ b/ansible/roles/rdns/templates/unbound.conf.j2
@@ -21,6 +21,7 @@ server:
   local-zone: d.f.ip6.arpa. nodefault
   logfile: ""
   log-servfail: yes
+  max-udp-size: 1232
   trust-anchor: 'dn42. IN DS 3096 10 2 B7C687A99BEE60E172EA439BD2D3087B1D970916575DB9C1CB591B7EE15D8CB1'
   trust-anchor: 'dn42. IN DS 64441 10 2 6DADDA00F5986BD26FE4F162669742CF7EBA07D212B525ACAC9840EE06CB2799'
   trust-anchor: 'd.f.ip6.arpa. IN DS 3096 10 2 23FB364C82E6ED1C30B18C635F58DCA58BBEB2E069BBD9D90AB9A90F66B948D2'
