Set metric to 512 when installing routes from BIRD
This prevents any routes installed by BIRD from overriding any kernel
device routes for IPv6 (installed at metric 256 through
iproute2 and ifupdown on Debian). Thus, a route for a locally attached
network that is advertised over BGP won't take precedence over the
device route.

--- a/ansible/roles/bird/templates/kernel.conf.j2
+++ b/ansible/roles/bird/templates/kernel.conf.j2
@@ -16,6 +16,7 @@ protocol kernel kernel4 {
             accept;
         };
     };
+    metric 512;  # This is high enough not to override kernel device routes.
 }
 
 protocol kernel kernel6 {
@@ -23,4 +24,5 @@ protocol kernel kernel6 {
         import none;
         export where source ~ [ RTS_OSPF, RTS_BGP, RTS_STATIC ];
     };
+    metric 512;
 }
